src/tess/tl/test/pass/test__Exit.tl
#module main
#import <cstdlib.tl>

main() {
    c__Exit(0)
    1
}
