src/tess/tl/test/fail/test_fail_alias_source_not_found.tl
#module main
#alias NE NonExistent

main() { NE.f() }
